// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar navigation characterisation > company admin navigation is unchanged 1`] = `
{
  "links": [
    "Sonae -> /",
    "aiRegister -> /app/governance/register",
    "askPlatform -> /app/assistant",
    "auditTrail -> /app/governance/audit-trail",
    "authDiagnostics -> /app/settings/auth-diagnostics",
    "calls -> /app/calls",
    "dashboard -> /app",
    "dashboard -> /app/settings",
    "governanceOverview -> /app/governance",
    "information -> /app/properties/information",
    "information -> /app/reports/information",
    "information -> /demos/movements/information",
    "logs -> /app/properties/logs",
    "policiesInForce -> /app/governance/policies",
    "propertiesScrapedData -> /app/properties/scraped-data",
    "propertiesSearch -> /app/properties/search",
    "reception -> /app/reception",
    "replayAlignment -> /demos/movements/replay-lab",
    "salesReport -> /app/reports",
    "studioLibrary -> /demos/movements",
    "tasks -> /app/tasks",
    "teamMembers -> /app/settings/team",
  ],
  "sections": [
    "governance",
    "organization",
    "postureStudio",
    "properties",
    "reports",
  ],
}
`;

exports[`sidebar navigation characterisation > signed-out navigation is unchanged 1`] = `
{
  "links": [
    "Sonae -> /",
    "askPlatform -> /app/assistant",
    "dashboard -> /app",
  ],
  "sections": [],
}
`;

exports[`sidebar navigation characterisation > standard user navigation is unchanged 1`] = `
{
  "links": [
    "Sonae -> /",
    "askPlatform -> /app/assistant",
    "calls -> /app/calls",
    "dashboard -> /app",
    "information -> /app/properties/information",
    "information -> /app/reports/information",
    "information -> /demos/movements/information",
    "logs -> /app/properties/logs",
    "propertiesScrapedData -> /app/properties/scraped-data",
    "propertiesSearch -> /app/properties/search",
    "reception -> /app/reception",
    "replayAlignment -> /demos/movements/replay-lab",
    "salesReport -> /app/reports",
    "studioLibrary -> /demos/movements",
    "tasks -> /app/tasks",
  ],
  "sections": [
    "postureStudio",
    "properties",
    "reports",
  ],
}
`;

exports[`sidebar navigation characterisation > super admin navigation is unchanged 1`] = `
{
  "links": [
    "Sonae -> /",
    "aiRegister -> /admin/governance/register",
    "allUsers -> /admin/directory",
    "analytics -> /admin/settings/analytics",
    "apiKeys -> /admin/settings/api-keys",
    "auditTrail -> /admin/governance/audit-trail",
    "authDiagnostics -> /admin/auth-diagnostics",
    "connections -> /admin/connections",
    "dashboard -> /admin",
    "governanceApprovals -> /admin/governance/approvals",
    "governanceOverview -> /admin/governance",
    "health -> /admin/health",
    "invitations -> /admin/super-admins/invite",
    "manageAgents -> /admin/agents",
    "manageCompanies -> /admin/companies",
    "manageGlobalAi -> /admin/ai",
    "manageWorkflows -> /admin/workflows",
    "plans -> /admin/settings/plans",
    "policiesInForce -> /admin/governance/policies",
    "schedules -> /admin/workflows/schedules",
    "scripts -> /admin/settings/scripts",
    "systemAdmins -> /admin/super-admins",
    "systemSettings -> /admin/settings",
    "tools -> /admin/ai/tools",
    "workflowRuns -> /admin/workflows/executions",
  ],
  "sections": [
    "agents",
    "ai",
    "companies",
    "governance",
    "maintenance",
    "settings",
    "userManagement",
  ],
}
`;
